# openapi/v1/openapi.json
@@ -2484,6 +2484,11 @@
             "type": "string",
             "minLength": 1,
             "maxLength": 2000
+          },
+          "clientId": {
+            "nullable": true,
+            "type": "string",
+            "pattern": "^[A-Za-z0-9_-]{16,64}$"
           }
         },
         "required": [
